# ezlime

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  X402_FRONTEND_GUIDE.md  X402_IMPLEMENTATION.md  X402_SIGNATURE_DEBUG.md  build.rs  docker-compose.yml  x402.md
.github/workflows/: cd.yml
ezlime-rs/: Cargo.toml  README.md
ezlime-rs/src/: lib.rs
migrations/2025-11-18-171916-0000_links/: up.sql
migrations/2025-11-22-020024-0000_link_key/: down.sql  up.sql
migrations/2025-11-22-143218-0000_link_counting_and_last_used/: down.sql  up.sql
migrations/2025-12-03-004604-0000_x402/: down.sql  up.sql
src/: app.rs  auth.rs  counter.rs  db_pool.rs  handler.rs  main.rs  migrations.rs  models.rs  schema.rs  signals.rs
src/db/: mod.rs  postgres.rs
src/x402/: facilitator.rs  middleware.rs  mod.rs  types.rs
