[package]
name = "ezlime-rs"
version = "0.2.0"
edition = "2024"
authors = ["extrawurst <mail@rusticorn.com>"]
documentation = "https://docs.rs/ezlime-rs"
description = "A Rust client library for the ezli.me URL shortener API"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["url-shortener", "api", "client", "ezlime"]
categories = ["api-bindings", "web-programming"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.17"
